Fix layout issue in profile dialog

--- a/src/app/features/profile/dlg-profile-edit/dlg-profile-edit.component.scss
+++ b/src/app/features/profile/dlg-profile-edit/dlg-profile-edit.component.scss
@@ -72,3 +72,7 @@ app-profile-avatar {
     @include fontSizeWeightColor($si: 18px, $we: 700, $co: $white);
     padding: 12px 25px;
 }
+
+app-choose-avatar {
+    width: 100%;
+}
